i didnt forget closing tags nope not me :) i would n e v e r absolutely NEVER forget closing tags smile

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <!-- Web page header -->
       <header class = "mdl-layout__header">
         <div class = "mdl-layout__header-row">
-          <span class = "mdl-layout-title">CHEating Exercise Software System (CHESS)</span>
+          <span class = "mdl-layout-title">CHeating Exercise Software System (CHESS)</span>
         </div>
       </header>
       <br>
@@ -82,5 +82,7 @@
       <div id="area"></div>
       <div id="perimeter"></div>
     </div>
-  </body
+    </main>
+    </div>
+  </body>
 </html>
